--- a/miniblog/requirements.txt
+++ b/miniblog/requirements.txt
@@ -1,8 +1,9 @@
-asgiref==3.8.0
-Django==5.0.3
-djangorestframework==3.15.1
+asgiref==3.8.1
+Django==5.0.6
+djangorestframework==3.15.2
 environs==11.0.0
-marshmallow==3.21.1
-packaging==24.0
+marshmallow==3.21.3
+packaging==24.1
+pip-review==1.3.0
 python-dotenv==1.0.1
-sqlparse==0.4.4
+sqlparse==0.5.0
