--- a/miniblog/pytest.ini
+++ b/miniblog/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = /miniblog/miniblog.settings
+DJANGO_SETTINGS_MODULE = miniblog.settings
 python_files = tests.py test_*.py *_tests.py
