--- a/miniblog/requirements.txt
+++ b/miniblog/requirements.txt
@@ -11,6 +11,7 @@ marshmallow==3.21.3
 packaging==24.1
 pip-review==1.3.0
 pluggy==1.5.0
+psycopg2-binary==2.9.9
 pytest==8.2.2
 pytest-django==4.8.0
 python-dotenv==1.0.1
@@ -19,4 +20,3 @@ PyYAML==6.0.1
 setuptools==70.2.0
 sqlparse==0.5.0
 uritemplate==4.1.1
-psycopg2
