--- a/miniblog/requirements.txt
+++ b/miniblog/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+dj-database-url==2.2.0
 Django==5.0.6
 django-axes==6.5.1
 django-secure==1.0.2
@@ -19,5 +20,5 @@ pytz==2024.1
 PyYAML==6.0.1
 setuptools==70.2.0
 sqlparse==0.5.0
+typing_extensions==4.12.2
 uritemplate==4.1.1
-gunicorn==20.1.0
