--- a/miniblog/requirements.txt
+++ b/miniblog/requirements.txt
@@ -6,6 +6,7 @@ django-secure==1.0.2
 djangorestframework==3.15.2
 drf-yasg==1.21.7
 environs==11.0.0
+gunicorn==22.0.0
 inflection==0.5.1
 iniconfig==2.0.0
 marshmallow==3.21.3
